--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "recaptcha"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 [dependencies]
 tokio = { version = "*", features = ["full"] }
 my-telemetry = { tag = "1.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
-reqwest = { version = "*", features = ["json"] }
+reqwest = { version = "*", features = ["json", "form"] }
 
 
 serde = { version = "*", features = ["derive"] }
